#include "rec/slow/commands/KeyStrokeMap.def.h"

// Created by the command line:
// new --include=command/map/CommandMap.pb --proto=command::KeyStrokeCommandMapProto src/rec/slow/commands/KeyStrokeMap.def

namespace rec {
namespace slow {
namespace commands {

Def<command::KeyStrokeCommandMapProto> keyStrokeMap(
"map {\n"
  "  entry {\n"
  "    command: ABOUT_THIS_PROGRAM\n"
  "    key: \"shift + ?\"\n"
  "  }\n"
  "  entry {\n"
  "    command: ADD_LOOP_POINT\n"
  "    key: \"l\"\n"
  "    key: \"command + l\"\n"
  "  }\n"
  "  entry {\n"
  "    command: AUDIO_PREFERENCES\n"
  "    key: \"command + ;\"\n"
  "  }\n"
  "  entry {\n"
  "    command: CLEAR_LOOPS\n"
  "    key: \"command + b\"\n"
  "  }\n"
  "  entry {\n"
  "    command: CLOSE_FILE\n"
  "    key: \"command + w\"\n"
  "  }\n"
  "  entry {\n"
  "    command: COPY\n"
  "    key: \"command + c\"\n"
  "  }\n"
  "  entry {\n"
  "    command: COPY_ALL_LOOP_POINTS\n"
  "    key: \"command + c\"\n"
  "  }\n"
  "  entry {\n"
  "    command: CUT\n"
  "    key: \"command + x\"\n"
  "  }\n"
  "  entry {\n"
  "    command: DEL\n"
  "    key: \"delete\"\n"
  "  }\n"
  "  entry {\n"
  "    command: DESELECT_ALL\n"
  "    key: \"command + d\"\n"
  "  }\n"
  "  entry {\n"
  "    command: EJECT_CDS\n"
  "    key: \"command + e\"\n"
  "  }\n"
  "  entry {\n"
  "    command: INVERT_LOOP_SELECTION\n"
  "    key: \"command + i\"\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"1\"\n"
  "    index: 0\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"2\"\n"
  "    index: 1\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"3\"\n"
  "    index: 2\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"4\"\n"
  "    index: 3\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"5\"\n"
  "    index: 4\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"6\"\n"
  "    index: 5\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"7\"\n"
  "    index: 6\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"8\"\n"
  "    index: 7\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"9\"\n"
  "    index: 8\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP\n"
  "    key: \"0\"\n"
  "    index: 9\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"command + cursor left\"\n"
  "    index: -5\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"command + cursor right\"\n"
  "    index: -1\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + !\"\n"
  "    index: 0\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + @\"\n"
  "    index: 1\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + #\"\n"
  "    index: 2\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + $\"\n"
  "    index: 3\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + %\"\n"
  "    index: 4\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + ^\"\n"
  "    index: 5\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + &\"\n"
  "    index: 6\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + *\"\n"
  "    index: 7\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + (\"\n"
  "    index: 8\n"
  "  }\n"
  "  entry {\n"
  "    command: JUMP_SELECTED\n"
  "    key: \"shift + )\"\n"
  "    index: 9\n"
  "  }\n"
  "  entry {\n"
  "    command: LOOP_NEXT_SEGMENT\n"
  "    key: \"n\"\n"
  "  }\n"
  "  entry {\n"
  "    command: KEYBOARD_MAPPINGS\n"
  "    key: \"command + k\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MIDI_MAPPINGS\n"
  "    key: \"command + m\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MODE_ADD_LOOP_POINT\n"
  "    key: \"option + a\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MODE_DRAG\n"
  "    key: \"option + d\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MODE_SET_TIME\n"
  "    key: \"option + t\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MODE_ZOOM_IN\n"
  "    key: \"option + z\"\n"
  "  }\n"
  "  entry {\n"
  "    command: MUTE_VOLUME_TOGGLE\n"
  "    key: \".\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_BACKWARD\n"
  "    key: \"cursor left\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_FORWARD\n"
  "    key: \"cursor right\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_VOLUME_DOWN\n"
  "    key: \"cursor down\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_VOLUME_UP\n"
  "    key: \"cursor up\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_SPEED_DOWN\n"
  "    key: \"_\"\n"
  "    key: \"shift + _\"\n"
  "    key: \"-\"\n"
  "  }\n"
  "  entry {\n"
  "    command: NUDGE_SPEED_UP\n"
  "    key: \"+\"\n"
  "    key: \"shift + +\"\n"
  "    key: \"=\"\n"
  "  }\n"
  "  entry {\n"
  "    command: OPEN\n"
  "    key: \"command + o\"\n"
  "  }\n"
  "  entry {\n"
  "    command: OPEN_PREVIOUS_FILE\n"
  "    key: \"command + r\"\n"
  "  }\n"
  "  entry {\n"
  "    command: PASTE\n"
  "    key: \"command + v\"\n"
  "  }\n"
  "  entry {\n"
  "    command: PASTE_OVER_LOOP_POINTS\n"
  "    key: \"command + v\"\n"
  "  }\n"
  "  entry {\n"
  "    command: QUIT\n"
  "    key: \"command + q\"\n"
  "  }\n"
  "  entry {\n"
  "    command: REDO\n"
  "    key: \"shift + command + z\"\n"
  "  }\n"
  "  entry {\n"
  "    command: SAVE_FILE\n"
  "    key: \"command + s\"\n"
  "  }\n"
  "  entry {\n"
  "    command: SAVE_FILE_SELECTION\n"
  "    key: \"command + shift + s\"\n"
  "  }\n"
  "  entry {\n"
  "    command: SELECT_ALL\n"
  "    key: \"command + a\"\n"
  "  }\n"
  "  entry {\n"
  "    command: SELECT_ONLY\n"
  "    key: \"ctrl + command + cursor left\"\n"
  "    index: -5\n"
  "  }\n"
  "  entry {\n"
  "    command: SELECT_ONLY\n"
  "    key: \"ctrl + cursor left\"\n"
  "    index: -4\n"
  "  }\n"
  "  entry {\n"
  "    command: SELECT_ONLY\n"
  "    key: \"ctrl + cursor right\"\n"
  "    index: -2\n"
  "  }\n"
  "  entry {\n"
  "    command: SELECT_ONLY\n"
  "    key: \"ctrl + command + cursor right\"\n"
  "    index: -1\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 1\"\n"
  "    index: 0\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 2\"\n"
  "    index: 1\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 3\"\n"
  "    index: 2\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 4\"\n"
  "    index: 3\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 5\"\n"
  "    index: 4\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 6\"\n"
  "    index: 5\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 7\"\n"
  "    index: 6\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 8\"\n"
  "    index: 7\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 9\"\n"
  "    index: 8\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_SELECTION\n"
  "    key: \"command + 0\"\n"
  "    index: 9\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_START_STOP\n"
  "    key: \"spacebar\"\n"
  "    key: \"return\"\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_STRETCH_ENABLE\n"
  "    key: \"s\"\n"
  "  }\n"
  "  entry {\n"
  "    command: TOGGLE_WHOLE_SONG_LOOP\n"
  "    key: \"w\"\n"
  "  }\n"
  "  entry {\n"
  "    command: UNDO\n"
  "    key: \"command + z\"\n"
  "  }\n"
  "  entry {\n"
  "    command: ZOOM_OUT\n"
  "    key: \"command + -\"\n"
  "  }\n"
  "  entry {\n"
  "    command: ZOOM_OUT_FULL\n"
  "    key: \"command + shift + -\"\n"
  "  }\n"
  "  entry {\n"
  "    command: ZOOM_TO_SELECTION\n"
  "    key: \"command  + \\'\"\n"
  "    key: \"numpad *\"\n"
  "  }\n"
  "} "
 );

}  // namespace commands
}  // namespace slow
}  // namespace rec
